# tayyariAI

./: .env.example  .env.local  .gitignore  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
server/: .gitignore  app.py  pyproject.toml
src/app/: layout.tsx  page.tsx
src/app/api/: route.ts
src/app/auth/signin/: page.tsx
src/app/auth/signup/: page.tsx
src/app/create/: page.tsx
src/app/dashboard/: page.tsx
src/components/auth/: AuthForm.tsx
src/components/create/: InputPanel.tsx  OutputPanel.tsx
src/components/dashboard/: EmptyState.tsx  ResumeCard.tsx
src/components/layout/: Footer.tsx  Navbar.tsx
src/components/ui/: accordion.tsx  avatar.tsx  date-picker.tsx  dropdown-menu.tsx
src/contexts/: AuthContext.tsx
src/lib/api/: resumes.ts
src/lib/firebase/: index.ts
src/lib/types/: types.ts
