[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "flask-sqlalchemy>=3.1.1",
    "openai>=2.14.0",
    "pymupdf>=1.26.7",
    "python-dotenv>=1.2.1",
    "werkzeug>=3.1.4",
]
